# Drift-Resilient_TabPFN

./: Drift_Resilient_TabPFN_Demo.ipynb  README.md  pyproject.toml  requirements-experiments.txt  requirements-release.txt
tabpfn/: __init__.py  best_models.py  local_settings.py  utils.py
tabpfn/datasets/: __init__.py  benchmark_dids.py  dist_shift_datasets.py
tabpfn/datasets/data/: chess.csv  elec2.csv  hyperplane_5feats_3drift_0-5mag_0-1noise.csv  occupancy_detection.csv  randomrbfdrift_4classes_8features_10centroids_10shiftingcentroids_2changespeed.csv
tabpfn/model/: __init__.py  bar_distribution.py  encoders.py  layer.py  mlp.py  multi_head_attention.py  save_peak_mem_factor.py  transformer.py  utils.py
tabpfn/scripts/: decision_boundary.py  model_builder.py  tabular_evaluation.py  tabular_evaluation_utils.py
tabpfn/scripts/estimator/: __init__.py  base.py  base_dist_shift.py  configs.py  feature_transformers.py  preprocessing.py  scoring_utils.py
tabpfn/scripts/tabular_baselines/: __init__.py  custom_folds.py  utils.py
tabpfn/scripts/tabular_baselines/methods/: __init__.py  catboost.py  lightgbm.py  tabpfn.py  wildtime.py  xgb.py
tabpfn/scripts/tabular_metrics/: classification.py  utils.py
